Resolvi alguns bugs que apareceram após a inserção do botão de 'dark mode', principalmente porque a posição dele estava interferindo quando aparecia o resultado.

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --font-family-resultado: "Press Start 2P", monospace;
 }
 
+/* TUDO QUE ENVOLVE APENAS O BODY EM GERAL */
+
 body {
     background-color: var(--bg-color);
     width: 100vw;
@@ -31,7 +33,10 @@ body {
     justify-content: center;
     align-content: center;
     font-size: 15px;
+    position: relative;
 }
+
+/* TUDO QUE ENVOLVE APENAS OS ELEMENTOS DO HEADER */
 
 header {
     grid-area: header;
@@ -43,36 +48,9 @@ header {
     text-shadow: 0 0 4px #000;
 }
 
-footer {
-    font-family: var(--font-family-footer);
-    color: var(--font-colorfooter);
-    grid-area: footer;
-    align-self: center;
-    justify-self: center;
-    font-size: 1rem;
-    text-align: center;
-    text-shadow: 0 0 2px #227;
-}
+/* TUDO QUE ENVOLVE O MAIN ONDE ESTÁ O JOGO */
 
-footer p {
-    margin: 5px auto;
-    padding: 5px 0;
-}
-
-footer p a:link {
-    text-decoration: none;
-}
-
-footer p a:visited {
-    color: var(--font-colorfooter)
-}
-
-footer p a:hover {
-    text-shadow: 0 0 2px #000;
-}
-
-/* CONTINUAR A ESTILIZAR A PARTIR DAQUI */
-
+/* Definição da divisão do main para servir de container */
 main {
     width: 100%;
     height: 100%;
@@ -86,6 +64,7 @@ main {
     align-items: center;
 }
 
+/* Aside em que aparece a informação do jogador que detém a jogada */
 #jogadorAtual {
     grid-area: atual;
     align-self: start;
@@ -106,6 +85,8 @@ main {
     padding: 0.3rem;
 }
 
+/* Div em que será criado o jogo dinamicamente pelo javascript */
+
 #jogo{
     grid-area: jogo;
     width: fit-content;
@@ -113,52 +94,6 @@ main {
     justify-content: center;
     background: var(--cor-fundo);
     box-shadow: 0 0 15px #FFF;
-}
-
-#vencedor {
-    grid-area: vencedor;
-    text-align: center;
-    justify-self: center;
-    display: flex;
-    flex-flow: column nowrap;
-    align-content: space-around;
-}
-
-#regras {
-    grid-area: vencedor;
-    text-align: center;
-    justify-self: center;
-    flex-flow: column nowrap;
-    align-content: space-around;
-    font-family: var(--font-family-footer);
-    color: var(--font-colorheader);
-    text-align: center;
-    line-height: 2rem;
-    margin-left: 20px;
-    font-size: 1.2rem;
-}
-
-#regras h3 {
-    text-decoration: underline;
-    margin: 1.5rem auto
-}
-
-#msgVitoria {
-    font-family: var(--font-family-resultado);
-    color: var(--font-colorresultado);
-    text-align: center;
-    text-shadow: 2px 1px 2px #000;
-    line-height: 3rem;
-}
-
-#vencedor button {
-    margin: 15px auto;
-    padding: 15px;
-    border-radius: 30px;
-    font-size: 1.2rem;
-    font-family: var(--font-family-resultado);
-    background-color: var(--bg-colorbutton);
-    color: var(--font-color-header);
 }
 
 .coluna {
@@ -186,9 +121,9 @@ main {
     margin: -1px;
     position: relative;
     align-self: center;
-    -webkit-animation-name: queda;
-    -webkit-animation-duration: 0.5s;
-    -webkit-animation-timing-function: linear;
+    animation-name: queda;
+    animation-duration: 0.4s;
+    animation-timing-function: linear;
 }
 
 .jogador1 {
@@ -199,7 +134,7 @@ main {
     background: var(--cor-jogador2);
 }
 
-@-webkit-keyframes queda {
+@keyframes queda {
     from {top: -350px}
     to {top: 0px}
 }
@@ -208,16 +143,66 @@ main {
     background: #80808048;
 }
 
+/* Aside que contém as divs que inicialmente apresenta regras e depois é substituído pelo resultado */
+
+#regrasResultado {
+    grid-area: vencedor;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+}
+
 #vencedor {
-    visibility: hidden;
+    text-align: center;
+    justify-self: center;
+    display: flex;
+    flex-flow: column nowrap;
+    align-content: space-around;
 }
 
 #regras {
     visibility: visible;
+    grid-area: vencedor;
+    justify-self: center;
+    flex-flow: column nowrap;
+    align-content: space-around;
+    font-family: var(--font-family-footer);
+    color: var(--font-colorheader);
+    text-align: center;
+    line-height: 2rem;
+    margin: 20px auto;
+    width: 80%;
+    font-size: 1.2rem;
+}
+
+#regras h3 {
+    text-decoration: underline;
+    margin: 1.5rem auto
+}
+
+#msgVitoria {
+    font-family: var(--font-family-resultado);
+    color: var(--font-colorresultado);
+    text-align: center;
+    text-shadow: 2px 1px 2px #000;
+    line-height: 3rem;
+}
+
+#vencedor button {
+    
+    margin: 15px auto;
+    padding: 15px;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    font-family: var(--font-family-resultado);
+    background-color: var(--bg-colorbutton);
+    color: var(--font-colorheader);
 }
 
 /* 
-para responsividade:
+para responsividade DEIXEI AQUI PARA O CASO DE PRECISAR RESOLVER SE A DIMINUIÇÃO DOS TAMANHOS, POR SI SÓ, NÃO RESOLVER <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<:
 
 header {
     font-size: 3rem;
@@ -234,8 +219,11 @@ footer {
  */
 /* Para o botão de mudança de tema */
 
-.dark {
-    margin: 0 200px;
+#darkMode {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 30px 40px;
 }
 
 .dark p {
@@ -284,4 +272,33 @@ input:checked + label::after {
 
 label:active:after {
     width: 45px;
+}
+
+/* TUDO QUE ENVOLVE APENAS OS ELEMENTOS DO FOOTER */
+footer {
+    font-family: var(--font-family-footer);
+    color: var(--font-colorfooter);
+    grid-area: footer;
+    align-self: center;
+    justify-self: center;
+    font-size: 1rem;
+    text-align: center;
+    text-shadow: 0 0 2px #227;
+}
+
+footer p {
+    margin: 5px auto;
+    padding: 5px 0;
+}
+
+footer p a:link {
+    text-decoration: none;
+}
+
+footer p a:visited {
+    color: var(--font-colorfooter)
+}
+
+footer p a:hover {
+    text-shadow: 0 0 2px #000;
 }
